tests/ui/consts/const_refs_to_static_fail.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_refs_to_static_fail.rs:14:13
   |
LL |     assert!(*C1.get() == 0);
   |             ^^^^^^^^^ constant accesses mutable global memory

error[E0080]: evaluation of constant value failed
  --> $DIR/const_refs_to_static_fail.rs:19:13
   |
LL |     assert!(*C2 == 0);
   |             ^^^ constant accesses mutable global memory

error: constant BAD_PATTERN cannot be used as pattern
  --> $DIR/const_refs_to_static_fail.rs:30:9
   |
LL |         BAD_PATTERN => {},
   |         ^^^^^^^^^^^
   |
   = note: constants that reference mutable or external memory cannot be used as pattern

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
